--- a/Project Development Phase/Sprint 2/Test_ML_Model.ipynb
+++ b/Project Development Phase/Sprint 2/Test_ML_Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "id": "ed01cbde",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "id": "9a33dac2",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "id": "8a38da48",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "id": "e502a136",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
        "<PIL.Image.Image image mode=RGB size=500x500>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "id": "31c90e6c",
    "metadata": {},
    "outputs": [
@@ -77,7 +77,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 1s 823ms/step\n",
+      "1/1 [==============================] - 9s 9s/step\n",
       "THE PREDICTED LETTER IS  F\n"
      ]
     }
@@ -87,6 +87,14 @@
     "frame=cv2.imread(path)\n",
     "data=detect(frame)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba3999d2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
